<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
    
    <TableLayout android:layout_height="wrap_content" 
    			 android:id="@+id/editor" 
    			 android:layout_width="fill_parent" >
    	<TableRow android:layout_width="fill_parent">
    		<TextView android:text="@string/drink_label_lbl"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />
    		<EditText android:text="" 
    				  android:id="@+id/drink_label" 
    				  android:layout_width="200dip" 
    				  android:layout_height="wrap_content" 
    				  android:inputType ="textCapWords"
    				  android:imeOptions ="actionNext"/>/>
    	</TableRow>
    	<TableRow android:layout_width ="fill_parent">
    		<TextView android:text="@string/drink_type_lbl"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />
    		<Spinner android:id="@+id/drink_types" android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>			  
    	</TableRow>
    	<TableRow android:layout_width ="fill_parent">	
    		<TextView android:text="@string/drink_volume_lbl"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />
    		<EditText android:text="" 
    				  android:id="@+id/drink_volume" 
    				  android:layout_width="50dip" 
    				  android:layout_height="wrap_content" 
    				  android:inputType ="numberSigned|numberDecimal"
    				  android:imeOptions ="actionNext"/>
    		<TextView android:text="@string/drink_volume_units"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  android:layout_height="wrap_content"
    				  />		 		  
    	</TableRow>			  
    	<TableRow android:layout_width="fill_parent">				  
    		<TextView android:text="@string/drink_proof_lbl"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />
    		<EditText android:text="" 
    				  android:id="@+id/drink_proof" 
    				  android:layout_width="50dip" 
    				  android:layout_height="wrap_content" 
    				  android:inputType ="numberSigned|numberDecimal"
    				  android:imeOptions ="actionNext"/>/>
    		<TextView android:text="@string/drink_proof_unit"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />		 		  
    	</TableRow>			  
    	<TableRow android:layout_width="fill_parent">				  
    		<TextView android:text="@string/drink_units_lbl"
    				  android:padding="3dip" 
    				  android:layout_width="wrap_content"
    				  />
    		<TextView android:text="" 
    				  android:id="@+id/drink_units" 
    				  android:layout_width="50dip" 
    				  android:layout_height="wrap_content" 
    				  android:editable="false"
    				  />		  		  
    	</TableRow>
    </TableLayout>
    <Button android:text="@string/save_drink_button" android:id="@+id/save_drink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"></Button>
   
</LinearLayout>
